# C.I.P.H.E.R.

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  run_poc.py
.github/workflows/: ci.yml
cipher/: README.md  __init__.py
cipher/agents/: README.md  __init__.py
cipher/are/: __init__.py
cipher/core/: README.md  __init__.py  cap_metrics.py  contracts.py  (+1 more)
devnex_assistant/: .gitignore  README.md  build.bat  main_gui.py  pyproject.toml  rebuild_and_run_gui.bat  requirements.txt  run_gui.sh
devnex_assistant/core/: console_logging.py  context_manager.py  errors.py  intent_classifier.py  orchestrator.py  run_context.py  skill_registry.py  workflow_engine.py
devnex_assistant/docs/: HLD.md  LLD.md  architecture_mvp_manual.md
devnex_assistant/gca/: bridge.py  vscode_invoker.py
devnex_assistant/generated_artifacts/: config.json
devnex_assistant/interfaces/cli/: cli_commands.py
devnex_assistant/interfaces/gui/: app.py  config_init_modal.py  constants.py  main_window.py  settings_manager.py  splash.py  step_indicator.py
devnex_assistant/interfaces/gui/panels/: config_panel.py  trace_panel.py  workflow_panel.py
devnex_assistant/interfaces/gui/styles/: palette.py
devnex_assistant/interfaces/gui/workers/: full_run_worker.py
devnex_assistant/persistence/: artifact_writer.py  config_store.py  state_store.py
devnex_assistant/prompts/: code_link_v1.md  lld_gen_v1.md
devnex_assistant/skills/: full_trace_skill.py  test_gen_skill.py
devnex_assistant/tests/: test_config_store.py  test_orchestrator.py  test_state_store.py
devnex_assistant/workflows/: S1_LLD_Generator.json  S2_Code_Link.json  S4_HLD_LLD_Link.json  S5_Full_Downstream.json  S6_Test_Gen.json  S8_UTD_Link.json
docs/: ASDLC.md  BUILD.md  CIPHER_HLD.md  CIPHER_LLD.md  CIPHER_archi.md  CODE_CHANGES_GUIDE.md  COURSE_PROMPT.md  DEMO_RUNBOOK_DIO.md  DOC_VERSIONING.md  DVF_OPTIN_GUIDE.md  SESSION_HANDOFF.md  SPRINT_PLAN.md  USER_GUIDE.md  USER_MANUAL.md  VSIX_DESIGN.md
extension/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: verify_dio_demo_ready.py  version_docs.py
(+346 files in other folders)
