[project]
name = "cipher"
version = "0.1.0"
description = "CIPHER — Cognitive Intelligent Platform for Holistic Embedded R&D Automation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "neo4j>=5.19",
    "nats-py>=2.7",
    "minio>=7.2",
    "langgraph>=0.4",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "httpx>=0.27",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.6",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1.360",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "nightly_e2e: marks tests that require real GCA/VS Code (deselect with '-m not nightly_e2e')",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
