[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devnex-assistant"
version = "1.0.0"
description = "DevNex Assistant — V-Cycle AI Automation for AUTOSAR/MISRA/ISO 26262"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5.2",
  "requests>=2.31.0",
  "click>=8.1.7",
  "pyyaml>=6.0.1",
  "PyQt6>=6.6.0",
  "typing_extensions>=4.9.0",
]

[project.scripts]
devnex = "interfaces.cli.cli_commands:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "generated_artifacts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
